--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "massive": "^5.11.2",
+    "node-localstorage": "^1.3.1",
     "node-pg-migrate": "^3.21.1",
     "pg": "^7.12.0"
   }
